--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -9,13 +9,13 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: $black;
   font-family: "MuseoModerno", cursive;
+  overflow-x: hidden;
 }
 
 a {
   display: inline;
   color: $white;
   text-align: left;
-  font-size: 24px;
   font-weight: 300;
   border-bottom: 2px solid transparent;
   transition: border 0.3s ease;
@@ -66,4 +66,9 @@ a {
   @include respond-above(md) {
     display: none;
   }
+}
+
+.no-scroll {
+  max-height: calc(100vh - 64px);
+  overflow: hidden;
 }
